--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,24 @@ spring:
     application:
         name: EmailService
 
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: teniznotification@gmail.com
+        password: aljp cacq gmwo lzlo
+        subject: Email Service Message
+        sender: teniznotification@gmail.com
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    starttls:
+                        enable: true
+                    connectiontimeout: 5000
+                    timeout: 5000
+                    writetimeout: 5000
+
+
 server:
     port: 8180
 
